syntax = "proto3";

package localmesh.federation.v1;

option go_package = "github.com/FABLOUSFALCON/localmesh/api/gen/federation/v1;federationv1";

// FederationService handles communication between LocalMesh servers (realms).
// Used for cross-realm service discovery and access.
service FederationService {
  // JoinFederation requests to join a federation of LocalMesh realms.
  rpc JoinFederation(JoinRequest) returns (JoinResponse);

  // LeaveFederation notifies other realms that this realm is leaving.
  rpc LeaveFederation(LeaveRequest) returns (LeaveResponse);

  // SyncServices exchanges service information between realms.
  rpc SyncServices(SyncRequest) returns (SyncResponse);

  // ResolveService looks up a service in another realm.
  rpc ResolveService(ResolveRequest) returns (ResolveResponse);

  // ExchangeTrust establishes trust between realms.
  rpc ExchangeTrust(TrustRequest) returns (TrustResponse);

  // Ping checks if a federated realm is alive.
  rpc Ping(PingRequest) returns (PingResponse);
}

// JoinRequest contains realm information for joining a federation.
message JoinRequest {
  // Unique realm identifier.
  string realm_id = 1;

  // Human-readable realm name.
  string realm_name = 2;

  // Realm's public endpoint (host:port).
  string endpoint = 3;

  // Realm's public key for verification.
  bytes public_key = 4;

  // Supported protocol version.
  string protocol_version = 5;

  // Realm metadata.
  map<string, string> metadata = 6;
}

// JoinResponse confirms federation membership.
message JoinResponse {
  bool accepted = 1;
  string error = 2;

  // Federation ID if accepted.
  string federation_id = 3;

  // List of other realms in the federation.
  repeated RealmInfo realms = 4;

  // Trust token for subsequent requests.
  bytes trust_token = 5;
}

// LeaveRequest notifies departure from federation.
message LeaveRequest {
  string realm_id = 1;
  string federation_id = 2;
}

// LeaveResponse confirms departure.
message LeaveResponse {
  bool success = 1;
  string error = 2;
}

// SyncRequest exchanges service catalog between realms.
message SyncRequest {
  string realm_id = 1;

  // Services available in this realm.
  repeated ServiceSummary services = 2;

  // Last sync timestamp for delta updates.
  int64 last_sync = 3;
}

// SyncResponse returns updated service information.
message SyncResponse {
  bool success = 1;
  string error = 2;

  // Services from the remote realm.
  repeated ServiceSummary services = 3;

  // Sync timestamp.
  int64 sync_time = 4;
}

// ResolveRequest looks up a service by name.
message ResolveRequest {
  // Service name to resolve (e.g., "lecture.cse").
  string service_name = 1;

  // Requesting realm ID.
  string requesting_realm = 2;

  // Requesting user's zone/role for access control.
  string zone = 3;
  repeated string roles = 4;
}

// ResolveResponse returns service location.
message ResolveResponse {
  bool found = 1;
  string error = 2;

  // Service endpoint information.
  string ip = 3;
  int32 port = 4;
  string hostname = 5;

  // Whether direct access is allowed or must proxy.
  bool direct_access = 6;

  // Proxy endpoint if direct access not allowed.
  string proxy_endpoint = 7;

  // Access token for the service (if auth required).
  string access_token = 8;
}

// TrustRequest establishes trust between realms.
message TrustRequest {
  string realm_id = 1;
  bytes public_key = 2;

  // What permissions this realm is requesting.
  repeated string requested_permissions = 3;
}

// TrustResponse confirms trust establishment.
message TrustResponse {
  bool accepted = 1;
  string error = 2;

  // Granted permissions.
  repeated string granted_permissions = 3;

  // Trust expiry time.
  int64 expires_at = 4;
}

// PingRequest checks realm availability.
message PingRequest {
  string realm_id = 1;
  int64 timestamp = 2;
}

// PingResponse confirms availability.
message PingResponse {
  string realm_id = 1;
  int64 timestamp = 2;
  string status = 3;
}

// RealmInfo describes a realm in the federation.
message RealmInfo {
  string realm_id = 1;
  string realm_name = 2;
  string endpoint = 3;
  bytes public_key = 4;
  int64 joined_at = 5;
  string status = 6;
  int32 service_count = 7;
}

// ServiceSummary is a compact service description for sync.
message ServiceSummary {
  string name = 1;
  string realm = 2;
  string hostname = 3;
  bool healthy = 4;
  repeated string tags = 5;
  bool public = 6;
  repeated string allowed_zones = 7;
  int64 updated_at = 8;
}
